# jnt-blender

./: .gitignore  .gitmodules  .mise.toml  README.md  __init__.py  action.yml  aqua-policy.yaml  aqua.yaml  blender_assets.cats.txt~  blender_manifest.toml  index.json  plugin.toml  pyproject.toml
.mise/: config.toml
assets/: jnt-icon.blend
services/extensions/: .mise.toml  aqua.yaml  pyproject.toml
services/extensions/comfyui/: blender_manifest.toml
services/extensions/modules/comfyui/: __init__.py  blender_manifest.toml  pyproject.toml
services/extensions/modules/jnt_comfyui/: blender_manifest.toml  pyproject.toml
services/extensions/modules/jnt_sandbox/: blender_assets.cats.txt  blender_manifest.toml  pyproject.toml
services/extensions/modules/jnt_sandbox/assets/: jnt-sandbox-template.blend
services/extensions/modules/jnt_sandbox/assets/brush/: jnt-sandbox-brush-curve.blend  jnt-sandbox-brush-jitter.blend  jnt-sandbox-brush-template.blend
services/extensions/modules/jnt_sandbox/assets/experimental/node/geometrie/: node-geometry-attribute.blend
services/extensions/modules/jnt_sandbox/assets/shader/: jnt-sandbox-shader-npr.blend  jnt-sandbox-shader-scene_time.blend
services/extensions/modules/jnt_sandbox/ui/: __init__.py
services/extensions/modules/sandbox/: NOTICE  blender_manifest.toml  pyproject.toml
services/extensions/modules/sandbox/assets/experimental/node/attribute/: note-attribute-normal.blend  note-attribute-tangent.blend
services/extensions/modules/sandbox/assets/experimental/shader/input/: shader-input-scene_time.blend
services/extensions/modules/sandbox/ui/: topbar.py
services/extensions/sandbox/: blender_manifest.toml
services/extensions/sandbox/assets/experimental/node/: blender_assets.cats.txt~
services/extensions/sandbox/assets/experimental/node/attribute/: note-attribute.blend
services/extensions/sandbox/operations/: extension.py
services/extensions/utils/: get_version.py  show_version.py  update_version.py
(+107 files in other folders)
