[project]
name = 'jnt'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
    'jnt-sandbox',
    'jnt-comfyui',
]

[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[tool.uv]
dev-dependencies = [
    'toml'
]

[tool.uv.sources]
jnt-sandbox = { path = "modules/sandbox", editable = true }
jnt-comfyui = { path = "modules/comfyui", editable = true }

[tool.setuptools.packages.find]
where = ["modules"]
include = [
    "sandbox"
]

[tool.setuptools_scm]
root = '../..'