[project]
name = "jnt"
version = "2025.1"
requires-python = ">=3.11"
dependencies = [ "jnt_sandbox", "jnt_comfyui",]

[tool.uv]
dev-dependencies = [ "toml",]

[tool.uv.workspace]
members = [ "modules/*",]

[tool.uv.sources.jnt_sandbox]
workspace = true

[tool.uv.sources.jnt_comfyui]
workspace = true
