[project]
name = 'jnt-sandbox'
#version = '0.1.0'
dynamic = ['version']
requires-python = '>=3.11'
dependencies = [
#    'bpy>=4.3.0',
]

[build-system]
requires = ['setuptools', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]

[tool.setuptools_scm]
root = '../../../..'